<resources>
    <!-- Activity Titles -->
    <string name="app_name">eWitness</string>
    <string name="activity_title_profile">About Me</string>
    <string name="activity_title_home">Home</string>
    <string name="activity_title_messages">Messages</string>
    <string name="activity_title_reports">Reports</string>

    <!-- Side Nav Menus -->
    <string name="nav_home">Home</string>
    <string name="nav_reports">Reports</string>
    <string name="nav_logout">Sign Out</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_messages">Messages</string>

    <!-- Menu Texts -->
    <string name="action_sign_out">Sign Out</string>
    <string name="action_settings">Settings</string>

    <!-- Buttons -->
    <string name="tbtn_text_off"></string>
    <string name="tbtn_text_on"></string>
    <string name="btn_submit_report">Submit</string>

    <!-- Text fields Texts -->
    <string name="txt_caption">Write a caption&#8230;</string>

    <!-- Labels -->
    <string name="lbl_caption">Caption:</string>
    <string name="lbl_category">Category:</string>
    <string name="lbl_default">Label:</string>
    <string name="lbl_location">Location:</string>

    <!-- Activity Views -->
    <string name="a">Sign Out</string>

    <!-- Content Description -->

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Message Prompts -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="location_permission_prompt">"Turn on Location to use eWitness".</string>


    <string name="title_activity_maps">Maps</string>
    <!-- Button Texts -->
    <string name="btnMapsText">Map</string>
    <string name="btnSatelliteText">Satellite</string>
    <string name="btnHybridText">Hybrid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="image_view_content_description">Slider image</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_report_details">Report Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
